# closer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
docs/howto/: d2l-clo-setup.md  importing-into-elumen.md  using-closer.md
src/closer/: main.py
